# gcp-adk-cv-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/agent/: __init__.py  agent.py  config.py  prompt.py  prompts.py
app/agent/sub_agents/critic/: agent.py  prompt.py
app/agent/sub_agents/reviser/: agent.py  prompt.py
app/agent/sub_agents/writer/: __init__.py  agent.py  prompt.py
cv_agents/: __init__.py  agent.py  config.py  prompt.py  tools.py
cv_agents/sub_agents/critic/: agent.py  prompt.py
cv_agents/sub_agents/reviser/: __init__.py  agent.py  prompt.py
cv_agents/sub_agents/writer/: agent.py  prompt.py
examples/: sample_cv.txt  sample_job_description.txt
